--- a/src/app/gifs/components/home/home-page.component.html
+++ b/src/app/gifs/components/home/home-page.component.html
@@ -3,6 +3,6 @@
         <gif-search-box></gif-search-box>
     </div>
     <div class="col-12 pt-2">
-        <gifs-card-list></gifs-card-list>
+        <gifs-card-list [gifs]="gifs"></gifs-card-list>
     </div>
 </div>
