--- a/src/app/gifs/components/gif-card/gif-card.component.html
+++ b/src/app/gifs/components/gif-card/gif-card.component.html
@@ -1,10 +1,15 @@
 <div class="text-center card mb-2 bg-dark">
-  <img 
+  <shared-lazy-image
+  [url]="gif.images.downsized_medium.url"
+  [alt]="gif.title || 'No title'">
+
+  </shared-lazy-image>
+  <!-- <img 
   class="card-img-top"
-  [src]="gif.images.downsized_medium.url" [alt]="gif.title">
+  [src]="gif.images.downsized_medium.url" [alt]="gif.title"> -->
   <div class="card-body text-white">
     <p class="card-text">
-      {{gif.title}}
+      {{gif.title || 'No title'}}
     </p>
   </div>
 </div>
